// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration action creators createIdentity should attempt to create an identity 1`] = `
Array [
  Object {
    "type": "SET_IS_REGISTERING",
    "value": true,
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Encrypting and storing data locally",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Fueling with ether",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Registering decentralized identity",
  },
  Object {
    "type": "DID_SET",
    "value": "did:jolo:mockdid",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Preparing launch",
  },
  Object {
    "type": "SET_IS_REGISTERING",
    "value": false,
  },
  Object {
    "params": Object {
      "mnemonic": "exhibit history avoid kit gaze pulse yellow portion hold lottery panda figure",
    },
    "routeName": "SeedPhrase",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Registration action creators startRegistration should save a password and initiate the registration process 1`] = `
Array [
  Object {
    "routeName": "Entropy",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Registration action creators submitEntropy should correctly navigate to route and provide the entropy 1`] = `
Array [
  Object {
    "routeName": "RegistrationProgress",
    "type": "Navigation/NAVIGATE",
  },
]
`;
